# nilcc

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: artifacts.yml  cd-image.yml  ci.yml  core-artifacts.yml  heartbeat-funder-docker.yml  nilcc-admin-cli-cd.yml  nilcc-admin-cli-docker.yml  nilcc-agent-cd.yml  nilcc-agent-cli-cd.yml  nilcc-agent-cli-docker.yml  nilcc-api-cd.yml  nilcc-api-ci.yml  nilcc-attester-cd.yml  nilcc-attester-docker.yml  nilcc-e2e-tests.yml  nilcc-verifier-cd.yml  nilcc-verifier-docker.yml  rust-ci.yml
artifacts/: README.md  download-core-artifacts.sh  generate-metadata.sh  upload.sh  versions.sh
artifacts/autoinstall_ubuntu/: README.md  build.sh  cvm-agent.service  docker_build.sh  user-data-guest-cpu.yaml  user-data-guest-gpu.yaml  user-data-host.yaml
artifacts/core/: generate-metadata.sh
artifacts/cvm-image/: build.sh  cvm-agent.service  setup.sh  user-data.yaml
artifacts/initramfs/: Dockerfile  build.sh  init.sh
artifacts/kernel/: AMDSEV-host.patch  README.md  build.sh  config-6.8.0-57-generic  docker_build.sh
artifacts/qemu/: AMDSEV.patch  README.md  build.sh  docker_build.sh  docker_build_ovmf.sh
artifacts/vm_image/: README.md  build.sh  (+4 more)
attestation-service/: Cargo.toml
attestation-service/examples/: report-verifier.rs
attestation-service/src/: certs.rs  config.rs  lib.rs  main.rs  report.rs  verify.rs
attestation-service/src/routes/: mod.rs
attestation-service/src/routes/report/: generate.rs
attestation-verifier/: Cargo.toml
crates/attestation-report/: Cargo.toml
crates/attestation-report/src/: v1.rs  v2.rs
crates/attestation-verification/: Cargo.toml
crates/attestation-verification/src/: certs.rs  error.rs  lib.rs  measurement.rs  report.rs  verify.rs
crates/nilcc-agent-models/: Cargo.toml
crates/nilcc-agent-models/src/: lib.rs
crates/nilcc-artifacts/: Cargo.toml
crates/nilcc-artifacts/src/: downloader.rs  lib.rs  metadata.rs
cvm-agent/: Cargo.toml  README.md  cvm-agent.sh
cvm-agent/caddy/: docker-compose.yaml
cvm-agent/resources/: Caddyfile  caddy.json  docker-compose.yaml
cvm-agent/services/: Caddyfile  docker-compose.yaml
cvm-agent/src/: caddy.rs  heartbeat.rs  main.rs  resources.rs
cvm-agent/src/monitors/: caddy.rs  compose.rs  mod.rs
cvm-agent/src/routes/: health.rs  mod.rs
cvm-agent/src/routes/config/: heartbeats.rs  mod.rs
cvm-agent/src/routes/containers/: list.rs  logs.rs  mod.rs
cvm-agent/src/routes/system/: bootstrap.rs  logs.rs  mod.rs  stats.rs
docker/: Dockerfile.nilcc-attester  nilcc-agent-cli.dockerfile  nilcc-attester.dockerfile  nilcc-verifier.dockerfile
heartbeat-funder/: Cargo.toml  Dockerfile
heartbeat-funder/src/: agent.rs  api.rs  config.rs  funder.rs  main.rs  metrics.rs  monitor.rs
initrd-helper/: Cargo.toml
nilcc-admin-cli/: Cargo.toml  Dockerfile
nilcc-admin-cli/src/: api.rs  main.rs  models.rs
nilcc-agent/: Cargo.toml  README.md  build.rs  clippy.toml  nilcc-agent-config.sample.yaml
nilcc-agent-cli/: Cargo.toml  Dockerfile
nilcc-agent-cli/src/: api.rs  main.rs
nilcc-agent/migrations/: 20250606204408_add_workloads_table.sql  20250612171250_add_workload_status.sql  20250806154636_unique_domain_column.sql  20250819203645_add_docker_credentials.sql  20250828201802_add_artifacts_version.sql  20250829190416_add_current_to_artifacts_table.sql  20250902180758_add_last_reported_state.sql  20250918183106_add_artifacts_metadata.sql  20250923211658_remove_current_from_artifacts.sql  20251002154846_not_null_artifact_metadata.sql  20251010202554_add_changelog_table.sql  20251206101500_add_ports_to_workload.sql  20251210172005_add_wallet_key_to_workloads.sql  20251211180828_add_heartbeats_to_workloads.sql  20251211214244_rename_heartbeats.sql
nilcc-agent/resources/: haproxy.cfg.j2  update.sh
nilcc-agent/src/: agent_service.rs  auth.rs  build_info.rs  compose.rs  config.rs  data_schemas.rs  gpu.rs  heartbeat_verifier.rs  http_client.rs  iso.rs  lib.rs  main.rs  output.rs  qemu_client.rs  resources.rs  tests.rs  version.rs
nilcc-agent/src/clients/: cvm_agent.rs  mod.rs  nilcc_api.rs  qemu.rs
nilcc-agent/src/grpc/: mod.rs
nilcc-agent/src/repositories/: artifacts.rs  changelog.rs  mod.rs  sqlite.rs  workload.rs
nilcc-agent/src/routes/: mod.rs
nilcc-agent/src/routes/system/: mod.rs
nilcc-agent/src/routes/system/agent/: upgrade.rs  version.rs
nilcc-agent/src/routes/system/artifacts/: changelog.rs  cleanup.rs  install.rs  mod.rs  upgrade.rs  version.rs  versions.rs
nilcc-agent/src/routes/system/verifier/: keys.rs
nilcc-agent/src/routes/workloads/: create.rs  delete.rs  health.rs  list.rs  mod.rs  restart.rs  start.rs  stop.rs
nilcc-agent/src/routes/workloads/containers/: list.rs  logs.rs  mod.rs
nilcc-agent/src/routes/workloads/system/: logs.rs  mod.rs  stats.rs
nilcc-agent/src/services/: disk.rs  mod.rs  proxy.rs  sni_proxy.rs  upgrade.rs  vm.rs  workload.rs
nilcc-agent/src/templates/: haproxy.cfg.j2
nilcc-agent/src/workers/: events.rs  heartbeat.rs  mod.rs  scheduler.rs  vm.rs
nilcc-agent/tests/: test_agent_grpc.rs
nilcc-api/: .dockerignore  .env  .env.dev  .env.sample  .env.test  Dockerfile  README.md  biome.jsonc  docker-compose.yml  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.js  vitest.config.ts
nilcc-attester/: Cargo.toml  build.rs
nilcc-attester/gpu-attester/: main.py  pyproject.toml
nilcc-attester/src/: cert.rs  config.rs  lib.rs  main.rs  report.rs
nilcc-attester/src/routes/: health.rs  mod.rs  report.rs
nilcc-attester/src/routes/report/: generate.rs
nilcc-attester/src/routes/v1/: about.rs  mod.rs  report.rs
nilcc-attester/src/routes/v2/: report.rs
nilcc-tests/: README.md  biome.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.ts
nilcc-verifier/: Cargo.toml  README.md
nilcc-verifier/src/: certs.rs  error.rs  main.rs  measurement.rs  report.rs  verify.rs
nilcc-verifier/src/routes/: mod.rs
nilcc-verifier/src/routes/v1/: mod.rs
nilcc-verifier/src/routes/v1/attestations/: mod.rs  verify.rs  verify_amd.rs
(+157 files in other folders)
