[workspace]
resolver = "2"

members = [
  "crates/attestation-report",
  "crates/attestation-verification",
  "crates/cvm-agent-models",
  "crates/nilcc-agent-models",
  "crates/nilcc-artifacts",
  "cvm-agent",
  "nilcc-admin-cli",
  "nilcc-attester",
  "nilcc-agent",
  "nilcc-agent-cli",
  "nilcc-verifier"
 ]

[workspace.dependencies]
sev = { git = "https://github.com/virtee/sev", branch = "main", default-features = false }
