[package]
name = "cvm-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
bollard = "0.19"
clap = { version = "4.5", features = ["derive", "string"] }
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.20"
tokio = { version =  "1.46", features = ["macros", "process", "rt", "signal"] }
tracing = "0.1"
tracing-subscriber = "0.3"

cvm-agent-models = { path = "../crates/cvm-agent-models" }
