[package]
name = "cvm-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["json"] }
axum-valid = "0.24"
anyhow = "1"
bollard = "0.19"
chrono = "0.4"
clap = { version = "4.5", features = ["derive", "string"] }
futures = "0.3"
regex = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sysinfo = { version = "0.36", default-features = false, features = ["system", "disk"] }
tempfile = "3.20"
tokio = { version =  "1.46", features = ["fs", "macros", "process", "rt", "signal"] }
tokio-stream = { version = "0.1", features = ["io-util"]}
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

cvm-agent-models = { path = "../crates/cvm-agent-models" }
