[package]
name = "heartbeat-funder"
version = "0.1.0"
edition = "2024"

[dependencies]
alloy = { version = "1.1", features = ["contract", "providers"] }
alloy-provider = { version = "1.1", features = ["ws"] }
anyhow = "1"
clap = { version =  "4.5", features = ["derive", "env"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
opentelemetry = { version = "0.31", default-features = false, features = ["metrics"] }
opentelemetry-otlp = { version = "0.31", default-features = false, features = ["grpc-tonic", "metrics"] }
opentelemetry_sdk = { version = "0.31", default-features = false, features = ["rt-tokio", "metrics"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls = { version = "0.23", features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.16"
thiserror = "2"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "time", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = "1.19"

nilcc-agent-models = { path = "../crates/nilcc-agent-models" }
