[package]
name = "nilcc-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "6"
docker-compose-types = "0.17"
erased-serde = "0.4"
hex = { version = "0.4", features = ["serde"] }
metrics = "0.24"
qapi = { version = "0.15", features = ["qmp", "async-tokio-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
tempfile = "3.19.1"
thiserror = "2"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "process", "time", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
users = "0.11"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }
sysinfo = { version = "0.35"}
once_cell = "1.20"

[dev-dependencies]
libc = "0.2"
rstest = { version = "0.25", default-features = false }
tracing-test = "0.2.5"
test-with = { version = "0.14", default-features = false }
wiremock = "0.6"
