[package]
name = "nilcc-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
hex = { version = "0.4", features = ["serde"] }
humantime = { version = "2.2.0"}
humantime-serde = "1.1.1"
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
once_cell = "1.20"
qapi = { version = "0.15", features = ["qmp", "async-tokio-all"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "migrate", "runtime-tokio", "sqlite", "uuid"] }
strum = { version = "0.27", features = ["derive"] }
sysinfo = { version = "0.35"}
tempfile = "3.19.1"
tera = { version = "1", default-features = false }
thiserror = "2"
tokio = { version = "1.44", features = ["rt-multi-thread", "macros", "net", "process", "time", "fs", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.17.0", features = ["serde", "v4"] }

[dev-dependencies]
mockall = "0.13"
rstest = { version = "0.25", default-features = false }
tracing-test = "0.2.5"
test-with = { version = "0.14", default-features = false }
