[package]
name = "nilcc-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
axum-server = "0.7"
bitcoin = { version = "0.32", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
docker-compose-types = { version = "0.22.0", default-features = false, features = ["yaml"] }
futures-core = "0.3"
hex = { version = "0.4", features = ["serde"] }
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.17", default-features = false, features = ["http-listener"] }
qapi = { version = "0.15", features = ["qmp", "async-tokio-all"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
rustls-acme = { version = "0.14", features = ["axum"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
serde_with = { version = "3.14", features = ["base64"] }
sha2 = "0.10"
sqlx = { version = "0.8", features = ["chrono", "migrate", "runtime-tokio", "sqlite", "uuid"] }
strum = { version = "0.27", features = ["derive"] }
sysinfo = { version = "0.37"}
tempfile = "3.23"
tinytemplate = "1.2"
thiserror = "2"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "net", "process", "time", "fs", "signal"] }
tokio-stream = "0.1"
tower = "0.5"
tracing = "0.1"
tracing-subscriber = { version = "0.3", default-features = false, features = ["env-filter", "fmt"] }
uuid = { version = "1.18", features = ["serde", "v4"] }
validator = { version = "0.20", features = ["derive"] }

cvm-agent-models = { path = "../crates/cvm-agent-models" }
nilcc-agent-models = { path = "../crates/nilcc-agent-models" }
nilcc-artifacts = { path = "../crates/nilcc-artifacts" }

[dev-dependencies]
mockall = "0.13"
rstest = { version = "0.26", default-features = false }
tracing-test = "0.2.5"
test-with = { version = "0.15", default-features = false }
