[package]
name = "nilcc-attester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
hex = { version = "0.4", features = ["serde"] }
num_cpus = "1.16"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
sev = { version = "6.1", default-features = false, features = ["snp"] }
thiserror = "2.0"
tokio = { version = "1.45", features = ["rt-multi-thread", "macros", "process", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
