[package]
name = "nilcc-attester"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = "0.8"
clap = { version = "4.5", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["yaml"] }
hex = { version = "0.4", features = ["serde"] }
num_cpus = "1.17"
rand = "0.9"
reqwest = { version = "0.12", features = ["rustls-tls"] }
serde = { version = "1.0", features = ["rc", "derive"] }
serde_with = { version = "3.14", default-features = false, features = ["hex", "macros"] }
# sev = { version = "7.1", default-features = false, features = ["snp"] }
sev = { git = "https://github.com/virtee/sev", branch = "main", default-features = false, features = ["snp"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt-multi-thread", "macros", "process", "signal"] }
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
x509-parser = "0.18"

attestation-report = { path = "../crates/attestation-report" }
