[package]
name = "nilcc-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive", "string", "env"] }
convert_case = "0.8"
hex = { version = "0.4", features = ["serde"] }
nom = "7.1"
openssl = { version = "^0.10" }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.16", features = ["hex"] }
sev = { version = "7.1", default-features = false, features = ["openssl", "snp"] }
sha2 = "0.10"
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "2.5"
x509-parser = { version = "0.18", features = ["verify"] } 

nilcc-artifacts = { path = "../crates/nilcc-artifacts" }
attestation-report = { path = "../crates/attestation-report" }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
