[package]
name = "nilcc-verifier"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
axum = { version = "0.8", features = ["json"] }
clap = { version = "4.5", features = ["derive", "string", "env"] }
convert_case = "0.10"
hex = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "3.16", features = ["hex"] }
sev = { workspace = true, default-features = false }
thiserror = "2.0"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

nilcc-artifacts = { path = "../crates/nilcc-artifacts" }
attestation-report = { path = "../crates/attestation-report" }
attestation-verification = { path = "../crates/attestation-verification" }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
