[package]
name = "attestation-report"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = { version = "3.14", features = ["hex"] }
sev = { version = "7.1", default-features = false, features = ["snp"], optional = true }

[features]
default = ["sev"]
sev = ["dep:sev"]

[dev-dependencies]
serde_json = "1.0"
