[package]
name = "attestation-verification"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
clap = { version = "4.5", features = ["derive"] }
hex = { version = "0.4", features = ["serde"] }
nom = "7.1"
openssl = { version = "^0.10" }
reqwest = { version = "0.12", features = ["rustls-tls", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sev = { workspace = true, default-features = false, features = ["openssl", "snp"] }

sha2 = "0.10"
thiserror = "2.0"
tracing = "0.1"
url = "2.5"
x509-parser = { version = "0.18", features = ["verify"] }

nilcc-artifacts = { path = "../nilcc-artifacts" }
attestation-report = { path = "../attestation-report" }

[dev-dependencies]
rstest = { version = "0.26", default-features = false }
